src/parser/snapshots/almond__parser__expression__tests__member_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"a.b.c\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "a",
      "start": 0,
      "end": 1
    },
    "property": {
      "type": "Identifier",
      "name": "b",
      "start": 2,
      "end": 3
    },
    "computed": false,
    "start": 0,
    "end": 3
  },
  "property": {
    "type": "Identifier",
    "name": "c",
    "start": 4,
    "end": 5
  },
  "computed": false,
  "start": 0,
  "end": 5
}
