src/parser/snapshots/almond__parser__expression__tests__member_expr-5.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"a[[]]\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "Identifier",
    "name": "a",
    "start": 0,
    "end": 1
  },
  "property": {
    "type": "ArrayExpression",
    "elements": [],
    "start": 2,
    "end": 4
  },
  "computed": true,
  "start": 0,
  "end": 5
}
