src/parser/snapshots/almond__parser__expression__tests__new_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"new Array\".into()).unwrap().1"
---
{
  "type": "NewExpression",
  "callee": {
    "type": "Identifier",
    "name": "Array",
    "start": 4,
    "end": 9
  },
  "arguments": [],
  "start": 0,
  "end": 9
}
