src/parser/snapshots/almond__parser__expression__tests__paren_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"(((1)))\".into()).unwrap().1"
---
{
  "type": "Literal",
  "value": 1.0,
  "start": 3,
  "end": 4
}
