src/parser/snapshots/almond__parser__expression__tests__sequence_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"(1,2,3)\".into()).unwrap().1"
---
{
  "type": "SequenceExpression",
  "expressions": [
    {
      "type": "Literal",
      "value": 1.0,
      "start": 1,
      "end": 2
    },
    {
      "type": "Literal",
      "value": 2.0,
      "start": 3,
      "end": 4
    },
    {
      "type": "Literal",
      "value": 3.0,
      "start": 5,
      "end": 6
    }
  ],
  "start": 1,
  "end": 6
}
