src/parser/snapshots/almond__parser__expression__tests__sequence_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"1,2,3\".into()).unwrap().1"
---
{
  "type": "SequenceExpression",
  "expressions": [
    {
      "type": "Literal",
      "value": 1.0,
      "start": 0,
      "end": 1
    },
    {
      "type": "Literal",
      "value": 2.0,
      "start": 2,
      "end": 3
    },
    {
      "type": "Literal",
      "value": 3.0,
      "start": 4,
      "end": 5
    }
  ],
  "start": 0,
  "end": 5
}
